# AerochatQt

./: CMakeLists.txt  aerochat.qrc  common.h  macos_shit.mm  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
control/: ccolorizednineslice.cpp  ccolorizednineslice.h  cnineslice.cpp  cnineslice.h
